Put domain in absolute URLs

--- a/_includes/post-page-pagination.html
+++ b/_includes/post-page-pagination.html
@@ -1,16 +1,16 @@
 <div class="pagination">
 
 	{% if page.next %}
-		<a href="{{page.next.url}}" class="next" title='Next'>&#9668;</a>
+		<a href="{{site.url}}/{{page.next.url}}" class="next" title='Next'>&#9668;</a>
 	{% else %}
 		<!-- No link needed for the last page -->
 		<span class="next" title='You are on the most recent page'>&#9668;</span>
 	{% endif %}
 
 	{% if page.previous %}
-		<a href="{{page.previous.url}}" class="previous" title='Previous'>&#9658;</a>
+		<a href="{{site.url}}/{{page.previous.url}}" class="previous" title='Previous'>&#9658;</a>
 	{% else %}
 		<span class="previous" title='You are on the last page'>&#9658;</span>
 	{% endif %}
-	
+
 </div>
