--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | UnitedShapes.com</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{site.url}}/css/main.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="/javascript/lib/modernizr.custom.97074.js"></script>
+    <script src="{{site.url}}/javascript/lib/modernizr.custom.97074.js"></script>
     <!--[if (gt IE 8)|!(IE)]><!-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
     <!--<![endif]-->
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{{site.url}}/favicon.ico">
 
 
 </head>
@@ -19,6 +19,6 @@
 
 <div class="wrapper">
     <div class="header">
-        <h1 class="logo"><a href="/"><img src="/images/logo/united-shapes-logo.png" alt="" width='217px' height='34px'></a></h1>
+        <h1 class="logo"><a href="/"><img src="{{site.url}}/images/logo/united-shapes-logo.png" alt="" width='217px' height='34px'></a></h1>
         <h2>{{ page.title }}</h2>
     </div>
