Change references of site.url to site.baseurl

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,7 +1,7 @@
             <div class="footer">
               <!-- <div class="contact"> -->
                 <p>
-                  <a href='{{site.url}}/about/'>About</a> /
+                  <a href='{{site.baseurl}}/about/'>About</a> /
                   <!-- <a href='#'>Get involved</a> /  -->
                   Created by <a href='https://twitter.com/Aptary'>Aptary</a>
                 </p>
