--- a/_includes/home-page-pagination.html
+++ b/_includes/home-page-pagination.html
@@ -3,10 +3,10 @@
 	{% if paginator.previous_page %}
 		{% if paginator.previous_page != 1%}
 			<!-- Adds the the link for all pages except the first page because... -->
-			<a href="{{site.url}}/{{ paginator.previous_page }}" class="previous" title='Previous'>&#9668;</a>
+			<a href="{{site.baseurl}}{{ paginator.previous_page }}" class="previous" title='Previous'>&#9668;</a>
 		{% else %}
 			<!-- ...the link for the home page is "/", not "/1" -->
-			<a href="{{site.url}}/" class="previous" title='Previous'>&#9668;</a>
+			<a href="{{site.baseurl}}" class="previous" title='Previous'>&#9668;</a>
 		{% endif %}
 	{% else %}
 		<!-- We are on the first page so no 'previous' link needed. -->
@@ -14,7 +14,7 @@
 	{% endif %}
 
 	{% if paginator.next_page %}
-		<a href="{{site.url}}/{{ paginator.next_page }}" class="next" title='Next'>&#9658;</a>
+		<a href="{{site.baseurl}}{{ paginator.next_page }}" class="next" title='Next'>&#9658;</a>
 	{% else %}
 		<!-- No link needed for the last page -->
 		<span class="next" title='Next'>&#9658;</span>
