Fix image paths in CSS

--- a/_scss/_home-page-grid.scss
+++ b/_scss/_home-page-grid.scss
@@ -26,7 +26,7 @@
 	width: 100%;
 }
 .posts li a {
-	background: url('/images/graph-paper/graph-paper-small.png');
+	background: url('#{$siteURL}/images/graph-paper/graph-paper-small.png');
 }
 
 /***************************/
