--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -3,6 +3,7 @@ $background: #f2f2f2;
 $hover: darken($background,20%);
 $bodyText: #333;
 $majorGridlines: #ebebeb;
+$siteURL: "http://unitedshapes.com";
 
 @import "reset";
 @import "common";
