--- a/_scss/_reset.scss
+++ b/_scss/_reset.scss
@@ -11,7 +11,7 @@ html, body{
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; 
+  font-size: 100%;
 }
 
 h1{
@@ -23,4 +23,8 @@ p{
 
 .clear{
   clear:both;
+}
+
+a img{
+	border:none; //removes border added by IE;
 }
