Add canonical link to header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
     <!--<![endif]-->
     <link rel="icon" type="image/x-icon" href="{{site.url}}/favicon.ico">
-
-
+    <link rel="canonical" href="{{site.baseurl}}{{page.url}}"/>
 </head>
 <!--[if lte IE 8]><body class='ieOld'><![endif]-->
 <!--[if (gt IE 8)|!(IE)]><!--> <body> <!--<![endif]-->
