Add conditional ta avoid /index.html in canonical link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,7 +11,11 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
     <!--<![endif]-->
     <link rel="icon" type="image/x-icon" href="{{site.url}}/favicon.ico">
+    {% if page.url == '/index.html' %}
+    <link rel="canonical" href="{{site.baseurl}}"/>
+    {% else %}
     <link rel="canonical" href="{{site.baseurl}}{{page.url}}"/>
+    {% endif %}
 </head>
 <!--[if lte IE 8]><body class='ieOld'><![endif]-->
 <!--[if (gt IE 8)|!(IE)]><!--> <body> <!--<![endif]-->
