--- a/_scss/main.scss
+++ b/_scss/main.scss
@@ -5,6 +5,7 @@ $bodyText: #333;
 $majorGridlines: #ebebeb;
 $siteURL: "http://unitedshapes.com";
 
+@import "fonts";
 @import "reset";
 @import "common";
 @import "header";
