Fix #2 with SVGeezy, remove unneeded IE conditional comments

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/css/main.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="{{site.baseurl}}/javascript/lib/modernizr.custom.97074.js"></script>
+    <script src="{{site.baseurl}}/javascript/lib/svgeezy.js"></script>
     <!--[if (gt IE 8)|!(IE)]><!-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
     <!--<![endif]-->
