--- a/_scss/_home-page-grid.scss
+++ b/_scss/_home-page-grid.scss
@@ -15,13 +15,13 @@
 }
 
 //Stops thumbnails on left having a margin-left
-.posts li:nth-child(3n-2){
-	margin-left: 0;
-}
-//Stops thumbnails on right having a margin-right
-.posts li:nth-child(3n){
-	margin-right: 0;
-}
+// .posts li:nth-child(3n-2){
+// 	margin-left: 0;
+// }
+// //Stops thumbnails on right having a margin-right
+// .posts li:nth-child(3n){
+// 	margin-right: 0;
+// }
 
 .posts img{
 	width: 100%;
