--- a/_scss/_shape-page.scss
+++ b/_scss/_shape-page.scss
@@ -28,7 +28,9 @@
 .shape, .shape-static{
 	margin-bottom: 80px;
 }
-
+img{
+	background: url('#{$siteURL}/images/graph-paper/graph-paper-small.png');
+}
 .shape-static img{
 	float:left;
 	max-width:100%;
