Increase specificity of 1ce8579d

--- a/_scss/_shape-page.scss
+++ b/_scss/_shape-page.scss
@@ -28,7 +28,7 @@
 .shape, .shape-static{
 	margin-bottom: 80px;
 }
-img{
+.post img{
 	background: url('#{$siteURL}/images/graph-paper/graph-paper-small.png');
 }
 .shape-static img{
