Add pagination to homepage

--- a/_includes/home-page-pagination.html
+++ b/_includes/home-page-pagination.html
@@ -6,7 +6,7 @@
 			<a href="{{site.baseurl}}{{ paginator.previous_page }}" class="previous" title='Previous'>&#9668;</a>
 		{% else %}
 			<!-- ...the link for the home page is "/", not "/1" -->
-			<a href="{{site.baseurl}}" class="previous" title='Previous'>&#9668;</a>
+			<a href="{{site.baseurl}}/" class="previous" title='Previous'>&#9668;</a>
 		{% endif %}
 	{% else %}
 		<!-- We are on the first page so no 'previous' link needed. -->
