Fix home page pagination

--- a/_includes/home-page-pagination.html
+++ b/_includes/home-page-pagination.html
@@ -14,7 +14,7 @@
 	{% endif %}
 
 	{% if paginator.next_page %}
-		<a href="{{site.baseurl}}{{ paginator.next_page }}" class="next" title='Next'>&#9658;</a>
+		<a href="{{site.baseurl}}/{{ paginator.next_page }}" class="next" title='Next'>&#9658;</a>
 	{% else %}
 		<!-- No link needed for the last page -->
 		<span class="next" title='Next'>&#9658;</span>
