Fix broken hrefs in head

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ page.title }} | UnitedShapes.com</title>
-    <link rel="stylesheet" href="/css/main.css">
+    <link rel="stylesheet" href="{{site.baseurl}}/css/main.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="{{site.baseurl}}/javascript/lib/modernizr.custom.97074.js"></script>
     <script src="{{site.baseurl}}/javascript/lib/svgeezy.js"></script>
     <!--[if (gt IE 8)|!(IE)]><!-->
     <script src="//cdnjs.cloudflare.com/ajax/libs/dat-gui/0.5/dat.gui.min.js"></script>
     <!--<![endif]-->
-    <link rel="icon" type="image/x-icon" href="{{site.url}}/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="{{site.baseurl}}/favicon.ico">
     {% if page.url == '/index.html' %}
     <link rel="canonical" href="{{site.baseurl}}"/>
     {% else %}
