Change remaining references of site.url to site.baseurl

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -19,7 +19,7 @@
 <script>
 	var shapeName = "{{page.name}}";
 </script>
-<script src='{{site.url}}/javascript/post.js'></script>
-<!-- <script src='{{site.url}}/javascript/shapes/{{page.name}}.js'></script> -->
+<script src='{{site.baseurl}}/javascript/post.js'></script>
+<script src='{{site.baseurl}}/javascript/shapes/{{page.name}}.js'></script>
 
 {% include footer.html %}
